Bug 1649358 - return `UNKNOWN_ACTION` when fail to get autoplay permission r=bryce

We can have different autoplay permission setting for specific sites, and those setting can override the global autoplay setting.

Eg. Global permission setting is `Block Audio & Video` but site A is being set to `Block Audio Only`, then when inaudible video wants to start on siteA, it would be allowed to autoplay.

Returning `DENY_ACTION` is like specifically modifying the site permission setting, but in those cases, we should return `UNKNOWN_ACTION` because we are actually not able to check the site permission.

Differential Revision: https://phabricator.services.mozilla.com/D82570